--- a/UI/src/components/widgets/repo/config.html
+++ b/UI/src/components/widgets/repo/config.html
@@ -31,7 +31,7 @@
 			   required />
 	</form-group>
 
-	<form-group ng-if="repoConfig.repoOption.name == 'GitHub'  || repoConfig.repoOption.name == 'Bitbucket' || repoConfig.repoOption.name == 'Gitlab'"
+	<form-group ng-if="repoConfig.repoOption.name == 'GitHub'  || repoConfig.repoOption.name == 'Bitbucket' || repoConfig.repoOption.name == 'Gitlab' || repoConfig.repoOption.name == 'VSO'"
 				errors="{required:'Branch is required'}"
 				input="gitBranch"
 				class="text-center">
@@ -57,7 +57,7 @@
 			   name="repouser"
 			   class="form-control text-center"
 			   ng-model="repoConfig.repouser"
-			   maxlength="25"
+			   maxlength="125"
 			   autocomplete="off"
 			   placeholder="Enter your repo username"/>
 	</form-group>
